--- a/train-schedule-kube-canary.yml
+++ b/train-schedule-kube-canary.yml
@@ -24,7 +24,7 @@ metadata:
   labels:
     app: train-schedule
 spec:
-  replicas: $CANARY_REPLICAS
+  replicas: 1
   selector:
     matchLabels:
       app: train-schedule
